fix: Enable group bookings for create booking route
